# AirQuality

./: .gitignore  CMakeLists.txt  README.md  Readme.md  main.cpp
Data/: DataAccess.cpp  DataAccess.h  Reader.cpp  Reader.h  main  makefile
Data/dataset/tests/: sensors.csv  users.csv
Interface/: GovernmentInterface.cpp  GovernmentInterface.h  GovernmetInterface.cpp  GovernmetInterface.h  IndividualInterface.cpp  IndividualInterface.h  InterfaceUtils.cpp  ProviderInterface.cpp  ProviderInterface.h
Model/: Attribute.cpp  Attribute.h  Cleaner.cpp  Cleaner.h  Government.cpp  Government.h  Individual.cpp  Individual.h  Measure.cpp  Measure.h  Provider.cpp  Provider.h  Sensor.cpp  Sensor.h  User.cpp  User.h
Services/: ClearAnalysis.h  Clustering.cpp  Clustering.h  Integrity.cpp  Integrity.h  Stats.cpp  Stats.h
Tests/: IntegrityTest.cpp  IntegrityTest.h  main.cpp
resources/release/: accounts.csv
resources/tests/: measures.csv  sensors.csv  users.csv
src/: CMakeLists.txt  main.cpp
src/data/: DataAccess.cpp  DataAccess.h  Reader.cpp  Reader.h
src/interface/: GovernmentInterface.cpp  GovernmentInterface.h  IndividualInterface.cpp  IndividualInterface.h  InterfaceUtils.cpp  InterfaceUtils.h  ProviderInterface.cpp  ProviderInterface.h
src/model/: Attribute.cpp  Attribute.h  Cleaner.cpp  Cleaner.h  Individual.cpp  Individual.h  Measure.cpp  Measure.h  Provider.cpp  Provider.h  User.cpp  User.h
src/services/: ClearAnalysis.cpp  Clustering.cpp  Clustering.h  Integrity.cpp  Integrity.h  Stats.cpp  Stats.h
tests/: CMakeLists.txt  ClusteringTest.cpp  ClusteringTest.h  DataTest.cpp  IntegrityTest.cpp  IntegrityTest.h  StatsTest.cpp  StatsTest.h  clusteringMain.cpp  dataMain.cpp  integrityMain.cpp  main.cpp  statsMain.cpp
tests/clusteringTests/: ClusteringTest.cpp  clusteringMain.cpp
tests/dataTests/: DataTest.cpp  DataTest.h  dataMain.cpp
tests/integrityTests/: IntegrityTest.cpp  integrityMain.cpp
tests/statsTests/: StatsTest.cpp  statsMain.cpp
